[Aman] ADD: Configured update device token route and toggle notifications
