# config/routes.rb
@@ -7,6 +7,8 @@ Rails.application.routes.draw do
   namespace :api do
     namespace :v1 do
       get 'current_user', to: 'users#current'
+       post 'update_device_token' => 'users#update_device_token'
+         patch 'toggle_notifications' => 'users#toggle_notifications'
       resources :movies, only: [:index, :show, :create, :update, :destroy]
       resources :subscriptions, only: [:create] do
         collection do
@@ -15,6 +17,7 @@ Rails.application.routes.draw do
         end
       end
       post 'webhooks/stripe', to: 'webhooks#stripe'
+      get 'subscriptions/status', to: 'subscrpitons#status'
     end
   end
 end
